--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,4 +3,5 @@ VERSION 1  FIRST RELEASE
 ========================
 
    Version 1.0 - First release
+      25/09/2019 22:07  1.0.1  Readme fixes, and example diagram
       25/09/2019 21:39  1.0.0  initial release
