--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 
+VERSION 2  SCHEMACRAWLER UPDATED TO 16.7.2 AND LARAVEL 7 SUPPORT
+================================================================
+
+   Version 2.0 - Schemacrawler updated to 16.7.2 and Laravel 7 support
+      28/05/2020 07:45  2.0.0  initial release
+
 VERSION 1  FIRST RELEASE
 ========================
 
